# emailclient

./: AGENTS.md  Cargo.toml  README.md
spec/: rustmail_design_doc.md
src/: config.rs  main.rs
src/mail/: auth.rs  imap.rs  mod.rs  storage.rs
