[package]
name = "emailclient"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
